--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "morgan": "~1.9.1",
     "phantom": "^6.3.0",
     "phantomjs2": "^2.2.0",
-    "tmp": "^0.1.0"
+    "tmp": "^0.1.0",
+    "cryptiles": ">=4.1.2",
+    "constantinople": ">=3.1.1",
+    "npmconf": ">=2.1.3",
+    "clean-css": ">=4.1.11",
+    "hawk": ">=3.1.3",
+    "adm-zip": ">=0.4.11",
+    "hoek": ">=4.2.1"
   }
 }
